--- a/.github/workflows/build-apk.yaml
+++ b/.github/workflows/build-apk.yaml
@@ -21,10 +21,13 @@ jobs:
           channel: stable
           flutter-version: 3.29.3
 
+      - name: Install jq
+        run: sudo apt-get install jq
+
       - name: Decode GOOGLE_SHEETS_CREDENTIALS and write to file
         run: |
           mkdir -p ./lib/assets
-          echo "${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}" > ./lib/assets/credentials.json
+          echo "${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}" | jq -r > ./lib/assets/credentials.json
 
       - name: Generate env.dart with SPREED_SHEET_ID
         run: |
