Github Actions: Generate build only when merge on main branch

--- a/.github/workflows/build-apk.yaml
+++ b/.github/workflows/build-apk.yaml
@@ -1,8 +1,8 @@
 name: Build Android Flutter APK
 
 on:
-  pull_request:
-    branches: ['main']
+  # pull_request:
+  #   branches: ['main']
   push:
     branches: [main]
 
