Github Actions: using base64 for secrets

--- a/.github/workflows/build-apk.yaml
+++ b/.github/workflows/build-apk.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Decode GOOGLE_SHEETS_CREDENTIALS and write to file
         run: |
           mkdir -p ./lib/assets
-          echo "${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}" | jq -r 'fromjson' > ./lib/assets/credentials.json
+          echo "${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}" | base64 --decode > ./lib/assets/credentials.json
 
       - name: Generate env.dart with SPREED_SHEET_ID
         run: |
